# family-assistant

./: .env.example  .gitignore  .release-please-manifest.json  AGENTS.md  AI_AGENT_GUIDELINES.md  CLAUDE.md  DESIGN.md  DOCKER.md  GEMINI.md  README.md  STEP_6_CHROMA_INDEXING_SUMMARY.md  STEP_6_CONTEXT_ASSEMBLY_IMPROVEMENTS.md  STEP_6_IMPLEMENTATION_NOTES.md  TODOS.md  docker-compose.yml  release-please-config.json  ruff.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: assistant-backend-docker-build.yml  assistant-backend-lint.yml  assistant-backend-test.yml  assistant-ui-ci.yml  assistant-ui-docker-build.yml  release-please.yml
apps/assistant-backend/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  models.py  pyproject.toml  pyrefly.toml  skills-lock.json
apps/assistant-backend/alembic/: README  env.py
apps/assistant-backend/alembic/versions/: 57bad9ffdeea_add_annotations_to_messages_and_create_.py  af123dbd3ffa_add_unique_partial_indexes_for_atomic_.py
apps/assistant-backend/apps/assistant-backend/: CHANGELOG.md
apps/assistant-backend/src/assistant/: app.py  constants.py  enums.py  logging.py  settings.py
apps/assistant-backend/src/assistant/models/: annotations.py  chat.py  conversation.py  conversation_sql.py  llm.py  memory.py  memory_sql.py  tool.py
apps/assistant-backend/src/assistant/routers/: auth.py  chat.py  conversations.py  health.py  user.py  web_utils.py
apps/assistant-backend/src/assistant/security/: google_bearer_token.py  security.py  session_auth.py
apps/assistant-backend/src/assistant/services/: __init__.py  assistant_annotations.py  context_assembly.py  conversation_service.py  converstation_service.py  llm_service.py  memory_storage.py  stream_parser.py  tool_service.py
apps/assistant-backend/src/assistant/services/tools/: __init__.py  base.py  current_time.py  errors.py  factory.py  web_fetch.py  web_search.py
apps/assistant-backend/src/assistant/utils/: database.py  datetime_utils.py  sse.py
apps/assistant-backend/tests/: conftest.py
apps/assistant-backend/tests/models/: test_memory_models.py
apps/assistant-backend/tests/routers/: test_auth.py  test_chat.py  test_conversations.py
apps/assistant-backend/tests/security/: test_google_bearer_auth.py
apps/assistant-backend/tests/services/: conftest.py  test_assistant_annotations.py  test_context_assembly_service.py  test_conversation_service.py  test_llm_service.py  test_memory_storage.py  test_stream_parser.py  test_stream_parser_tool_calls.py  test_tool_service.py
apps/assistant-backend/tests/services/conversation/: conftest.py  test_conversation_annotations.py  test_conversation_background.py  test_conversation_creation.py  test_conversation_listing.py  test_conversation_llm_tools.py  test_conversation_messaging.py  test_conversation_retrieval.py  test_conversation_streaming.py
apps/assistant-backend/tests/services/tools/: test_current_time_tool.py  test_web_fetch_tool.py  test_web_search_tool.py
apps/assistant-backend/tests/utils/: test_sse_encoder.py
apps/assistant-ui/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/assistant-ui/apps/assistant-ui/: CHANGELOG.md
apps/assistant-ui/src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
apps/assistant-ui/src/components/: Chat.test.tsx  Chat.tsx  ConversationsChat.test.tsx  ConversationsChat.tsx  EvidencePanel.test.tsx  EvidencePanel.tsx  GoogleSignInButton.tsx  MarkdownContent.test.tsx  MarkdownContent.tsx  MemoryDetail.test.tsx  MemoryDetail.tsx  SourceDetail.test.tsx  SourceDetail.tsx  ToolDetail.test.tsx  ToolDetail.tsx
apps/assistant-ui/src/hooks/: useStreamingConversation.test.ts  useStreamingConversation.ts
apps/assistant-ui/src/lib/: api.test.ts  api.ts  auth.tsx
apps/assistant-ui/src/types/: api.ts  google.d.ts
apps/llm-server/: README.md
docs/: ARCHITECTURE.md  ATTACHMENT_INGESTION_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  MODEL_PRESETS_PRD.md  PROMPT_TOKEN_COMPRESSION_IMPLEMENTATION_PLAN.md  PROMPT_TOKEN_REDUCTION_PLAN.md  STREAMING_RESPONSES_PRD.md
