[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant"
version = "0.0.1"
description = "Backend for amazing family assistant"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Stuart Langley"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi==0.128.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
]

[project.optional-dependencies]
dev = [
    "asgi-lifespan==2.1.0",
    "httpx==0.28.1",
    "pydocstyle==6.3.0",
    "pylint==4.0.4",
    "pyrefly==0.48.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.11",
    "yapf==0.43.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
assistant = ["py.typed"]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
]

[tool.pylint.main]
recursive = true

[tool.pylint.messages_control]
max-line-length = 80
disable = [
    "C0103",  # Invalid name (sometimes necessary)
]

[tool.pylint.design]
max-args = 5
max-attributes = 10

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydocstyle]
convention = "google"
match = "(?!test_).*\\.py"
match-dir = "^(?!tests|\\.).*"

[tool.yapf]
based_on_style = "google"
column_limit = 100
