[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant"
version = "0.1.0"
description = "Backend for amazing family assistant"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Stuart Langley"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiosqlite==0.22.1",
    "asyncpg==0.31.0",
    "beautifulsoup4==4.14.3",
    "chromadb==1.5.5",
    "ddgs==9.13.1",
    "fastapi==0.135.2",
    "cachecontrol==0.14.4",
    "google-auth==2.48.0",
    "gunicorn==25.3.0",
    "httpx==0.28.1",
    "itsdangerous==2.2.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "sqlalchemy[asyncio]==2.0.49",
    "sqlmodel==0.0.38",
    "uvicorn==0.42.0",
]

[project.optional-dependencies]
dev = [
    "alembic==1.18.4",
    "asgi-lifespan==2.1.0",
    "pydocstyle==6.3.0",
    "pylint==4.0.5",
    "psycopg[binary]==3.3.3",  # Synchronous PostgreSQL driver for Alembic migrations
    "pyrefly==0.48.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-env==1.5.0",
    "ruff==0.15.8",
    "yapf==0.43.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
assistant = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]

[tool.pytest_env]
GOOGLE_OAUTH_CLIENT_ID = 'not-a-real-client-id'
SESSION_SECRET_KEY = 'not-a-real-secret-key'
ENVIRONMENT = 'development'
LLM_BASE_URL = 'http://localhost'
DATABASE_URL = 'sqlite+aiosqlite:///:memory:'
CHROMA_HOST = 'http://localhost'
CLIENT_ORIGINS = []




[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
]

[tool.pylint.main]
recursive = true

[tool.pylint.messages_control]
max-line-length = 80
disable = [
    "C0103",  # Invalid name (sometimes necessary)
]

[tool.pylint.design]
max-args = 5
max-attributes = 10

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydocstyle]
convention = "google"
match = "(?!test_).*\\.py"
match-dir = "^(?!tests|\\.).*"

[tool.yapf]
based_on_style = "google"
column_limit = 100
